2004-06-23  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/mainwindow.py, gaphor/ui/toolbox.py: explicitly import
	actions.
	* doc/plugin.txt: explenation how plugins work
	* setup.py: Boost version to 0.5.0.

2004-06-22  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/plugin.py: new file. provided stuff needed by possible
	plugins.
	* gaphor/pluginmanager.py: new file. Plugin loading facility.
	* data/plugins/*: added (demo) plugin.
	* setup.py: reordered some code, so version.py is properly generated
	on FreeBSD.
	
2004-06-20  wrobell

	* gaphor/diagram/interface.py: - change look of interface depending
	on connected associations and implementations, nfy
	* gaphor/diagram/implementation.py: - change look into solid line
	when connected to folded interface   (InterfaceItem)

2004-06-17  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/klass.py: Made stereotypes work. Added a menu entry
	that allows the user to apply a stereotype to a class.
	* data/pixmaps/profile24.png: new icon for Profile.

2004-06-15  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/misc/action.py: Added register_action_for_slot() and
	get_actions_for_slot().
	* gaphor/diagram/klass.py: added support for stereotypes.
	* gaphor/ui/mainwindow.py: added stereotype box
	* gaphor/UML/uml2.gaphor: added association appliedStereotype to
	Class, Package and Interface.
	
2004-06-12  wrobell

	* gaphor/ui/mainwindow.py: - use cases enabled, since associations work now

2004-06-10  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/UML/__init__.py: do the resource initialization of the
	ElementFactory. Added some functions that make it more easy to access
	the default element factory.

2004-06-09  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/UML/uml2.gaphor: fixed typo: implementingClassifier ->
	implementatingClassifier.
	
2004-06-05  wrobell
	* gaphor/diagram/: interface.py, itemactions.py, klass.py: - first
	steps to add folding/unfolding of interfaces